Fix appearance of more info box on Safari

--- a/Web/DataDiscovery/css/dbs.css
+++ b/Web/DataDiscovery/css/dbs.css
@@ -1114,7 +1114,7 @@ table.sortable span.sortarrow {
 /*  height: 250px; */
   margin-top: 10px;
   width: 240px;
-  height: 180px; 
+  height: 190px; 
   overflow:auto;
 
   color: #000000;
